--- a/src/style.sass
+++ b/src/style.sass
@@ -76,11 +76,12 @@ html
 			width: 100%
 			max-width: 100px
 			height: 97%
+			cursor: pointer
 		input
 			width: 100%
-			text-indent: 10px
+			text-indent: 5px
 			border-radius: 18px
-			margin-left: 10px
+			margin-left: 5px
 			font-size: 1.3em
 			color: $twitch
 
